--- a/gear-vue-app/src/styles/App.css
+++ b/gear-vue-app/src/styles/App.css
@@ -94,3 +94,39 @@ header {
 }
 
 
+/* /////////////// */
+/* Order Page Styling */
+/* /////////////// */
+
+.new-order-form {
+  display: flex;
+  justify-content: center;
+}
+
+.new-order-form table {
+  border: solid 10px #f6e01f;
+  border-radius: 15px;
+  padding: 10px 5px;
+}
+
+.new-order-form td {
+  color: #fff986;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 5px 0;
+  width:250px;
+}
+
+.new-order-form button {
+  font-size: 20px;
+  color: #fff986;
+  margin: 15px 0;
+  height: 60px;
+  width:250px;
+  border: #f6e01f solid 5px;
+  background-color: #00365f;
+}
+
+.new-order-form button:hover {
+  color: black;
+  background-color: #fff986;
+}
