--- a/gear-vue-app/src/styles/App.css
+++ b/gear-vue-app/src/styles/App.css
@@ -25,6 +25,15 @@ nav {
   padding: 8px 20px;
 }
 
+@media screen and (max-width: 750px) {
+  nav {
+    height: 34px;
+  }
+  .nav-link {
+    font-size:14px;
+  }
+}
+
 .nav-link:hover {
   background-color: #fff986;
   color:black;
@@ -40,6 +49,12 @@ header {
   font-size: 72px;
   color: #f6e01f;
   padding: 48px 0;
+}
+
+.sub-heading {
+  font-size: 24px;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #fff986;
 }
 
 /* /////////////// */
@@ -129,4 +144,136 @@ header {
 .new-order-form button:hover {
   color: black;
   background-color: #fff986;
+}
+
+.order-items {
+  display: flex;
+  justify-content: center;
+}
+
+.order-items th, td {
+  height: 30px;
+  padding: 5px 10px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+/* /////////////// */
+/* Home Page Styling */
+/* /////////////// */
+
+.home-page-wrapper img {
+  max-width: 300px;
+  max-height: 500px;
+}
+
+.home-page-wrapper {
+  display: grid;
+  grid-template-rows: 1fr 3fr 1fr 2fr 2fr 3fr 3fr 3fr 1fr 2fr;
+  margin: 0 5%;
+}
+
+.row-two, .row-five, .row-seven {
+  display:flex;
+  align-items: center;
+}
+
+.first-text-block, .second-text-block, .third-text-block, .fourth-text-block, .contact-text {
+  text-align: justify;
+  display: flex;
+  align-items: center;
+  color: #c0c0c0;
+  font-size: 20px;
+  padding: 0 20px;
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+}
+
+.services-list {
+  display: flex;
+  padding: 0;
+  list-style: none;
+  color: #fff986;
+  font-size: 20px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.services-list li {
+  border: solid #c0c0c0 1px;
+  display: flex;
+  color: #c0c0c0;
+  align-items: center;
+  justify-content: center;
+  margin: 5px;
+  border-radius: 5px;
+  background-color: #404040;
+  width: 25%;
+}
+
+.home-page-header, .row-five {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #c0c0c0;
+  padding: 0;
+  color: #404040;
+  margin: 20px 0;
+}
+
+.row-five {
+  justify-content: space-around;
+}
+
+.contact-link-container, .contact-text {
+  margin-top: 40px;
+}
+
+.contact-link-container {
+  margin-bottom: 40px;
+}
+
+.contact-link {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  color: #f6e01f;
+  text-decoration: none;
+  background-color: #00365f;
+  padding: 8px 20px;
+  border:#f6e01f solid 5px;
+  border-radius: 5px;
+}
+
+.contact-link:hover {
+  background-color: #fff986;
+  color:black;
+}
+
+@media screen and (max-width: 750px) {
+  .home-page-wrapper img {
+    max-width: 150px;
+    max-height: 300px;
+  }
+  .home-page-wrapper {
+    display: grid;
+    grid-template-rows: 0.5fr 1.5fr 0.5fr 1.5fr 1fr 1fr 1.5fr 1.5fr 0.5fr 0.5fr 1fr;
+    margin: 0 5%;
+  }
+  
+  .services-list li {
+    font-size: 14px;
+  }
+
+  .first-text-block, .second-text-block, .third-text-block, .fourth-text-block, .contact-text {
+    font-size: 14px;
+    padding: 0 20px;
+  }
+
+  header {
+    font-size: 24px;
+    padding-bottom: 15px;
+  }
+
+  .home-page-header, .row-five {
+    padding: 0;
+    margin: 10px 0;
+  }
+
 }
