--- a/gear-vue-app/src/styles/App.css
+++ b/gear-vue-app/src/styles/App.css
@@ -8,6 +8,10 @@
   text-align: center;
 }
 
+.page-wrapper {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 nav {
   display: flex;
   height: 40px;
@@ -155,6 +159,16 @@ header {
   height: 30px;
   padding: 5px 10px;
   font-family: Arial, Helvetica, sans-serif;
+  border-bottom: solid white 1px;
+}
+
+.order-items table {
+  width: 90%;
+  border-collapse: collapse;
+}
+
+.order-items tbody  {
+  background-color: #00365f;
 }
 
 /* /////////////// */
@@ -276,4 +290,13 @@ header {
     margin: 10px 0;
   }
 
+}
+
+
+/* /////////////// */
+/* Login Page Styling */
+/* /////////////// */
+
+.logout-button {
+  margin-top: 30px;
 }
